samples/_failures_safe/1761149475_33f3c6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1281024c.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_1281024c.c:186:19: error: expected ‘;’ at end of input
  186 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_1281024c.c:186:13: error: expected declaration or statement at end of input
  186 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_1281024c.c:186:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1281024c.c:186:13: error: expected declaration or statement at end of input
